--- a/docs/content/components/River.mdx
+++ b/docs/content/components/River.mdx
@@ -159,10 +159,11 @@ import {River} from '@primer/react-brand'
 
 ### River.Visual <Label>Required</Label>
 
-| Name        | Type           | Default | Description                                                                                                      |
-| :---------- | :------------- | :-----: | :--------------------------------------------------------------------------------------------------------------- |
-| `children`  | `ReactElement` |         | Bring your own component (BYOC) `img` or `ReactElement` (E.g. Next.js `Image` component)                         |
-| `hasShadow` | `boolean`      | `true`  | Shadow automatically applied to the `children`. Set be `false` when the child node has a transparent background. |
+| Name        | Type           | Default | Description                                                                                                                                   |
+| :---------- | :------------- | :-----: | :-------------------------------------------------------------------------------------------------------------------------------------------- |
+| `fillMedia` | `boolean`      |  true   | Automatically styles images and video to fill and fit the width of the parent. Disable this setting if you have bespoke styling requirements. |
+| `children`  | `ReactElement` |         | Bring your own component (BYOC) `img` or `ReactElement` (E.g. Next.js `Image` component)                                                      |
+| `hasShadow` | `boolean`      | `true`  | Shadow automatically applied to the `children`. Set be `false` when the child node has a transparent background.                              |
 
 ### River.Content <Label>Required</Label>
 
