--- a/apps/docs/content/components/Image.mdx
+++ b/apps/docs/content/components/Image.mdx
@@ -2,7 +2,7 @@
 title: Image
 status: Experimental
 source: https://github.com/primer/brand/blob/main/packages/react/src/Image/Image.tsx
-storybook: '/brand/storybook/?path=/docs/components-image--playground'
+storybook: '/brand/storybook/?path=/story/components-image--playground'
 description: Use Image to create both normal and responsive image elements.
 ---
 
@@ -61,7 +61,7 @@ The `sources` prop can be used to set the source elements within the `picture` c
 
 ### Image with source set
 
-The `srcSet` prop can be used to set the srcSet of the image. It also creates a `source` tag within a picture element if the `as` prop is set to `picture`.
+The `srcSet` prop can be used to set the srcSet of the image. This can only be used when `as` is set to `img`.
 
 ```jsx live
 <Image
@@ -116,7 +116,7 @@ The `width` prop can be used to set the width of the image. This can be used alo
 | name          | type                                              | default     | required | description                                                                                                                                                               |
 | ------------- | ------------------------------------------------- | ----------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | `src`         | `string`                                          |             | `true`   | Specifies the path to the image                                                                                                                                           |
-| `alt`         | `string`                                          |             | `true`   | Specifies a text value explaining the nature of the image for users of Assistive Technolog y                                                                              |
+| `alt`         | `string`                                          |             | `true`   | Specifies a text value explaining the nature of the image for users of assistive technology                                                                               |
 | `as`          | `img`, `picture`                                  | `img`       | `false`  | Specification to create a picture component                                                                                                                               |
 | `sources`     | `{srcset: string, media: string}[]`               |             | `false`  | When picture is specified in the `as` prop sources allows you to set the source elements.                                                                                 |
 | `aspectRatio` | `'1:1'`, `'16:9'`, `'16:10'`, `'4:3'`, `'custom'` | `undefined` | `false`  | Sets the image aspect ratio. A custom ratio can be provided in the design tokens.                                                                                         |
@@ -124,4 +124,4 @@ The `width` prop can be used to set the width of the image. This can be used alo
 | `width`       | `number`                                          |             | `false`  | The width of the image element or its container if it has an aspect ratio                                                                                                 |
 | `loading`     | `eager`, `lazy`                                   | `eager`     | `false`  | The loading attribute specifies whether a browser should load an image immediately or to defer loading of off-screen images until for example the user scrolls near them. |
 | `decoding`    | `sync`, `async`, `auto`                           | `sync`      | `false`  | Sets the image decoding strategy. Representing a hint given to the browser on how it should decode the image.                                                             |
-| `className`   | `string`                                          |             | `false`  | Custom image class                                                                                                                                                        |
+| `className`   | `string`                                          |             | `false`  | Sets a custom CSS class                                                                                                                                                   |
